fixed overflow txt issue

--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,14 @@
   font-family: 'Montserrat', sans-serif;
   color: black;
 }
+.prevent-text-breakouts {
+  -ms-word-break: break-all;
+  word-break: break-all;
+  word-break: break-word;
+  -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  hyphens: auto;
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -189,8 +197,6 @@ a {
 }
 .container {
   position: absolute;
-  top: 12vh;
-  margin-top: 0;
   width: 100vw;
   height: 100%;
   display: flex;
@@ -198,12 +204,10 @@ a {
   justify-content: center;
   align-items: center;
   background-image: url("https://cdn.discordapp.com/attachments/644333219512188928/644357514607067156/auction-image.png");
-  z-index: 0;
 }
 .container h1 {
   display: flex;
   font-size: 9rem;
-  margin-bottom: 8vh;
   justify-content: center;
   padding-bottom: 10vh;
   font-weight: bold;
@@ -212,31 +216,27 @@ a {
 @media (max-width: 1000px) and (min-width: 500px) {
   .container h1 {
     font-size: 6rem;
+    padding-bottom: 5vh;
   }
 }
 @media (max-width: 500px) {
   .container h1 {
     font-size: 5rem;
+    padding-bottom: 5vh;
   }
 }
 .container nav {
   display: flex;
 }
-@media (max-width: 1000px) and (min-width: 500px) {
-  .container nav {
-    display: block;
-    padding: 10px;
-  }
-}
 @media (max-width: 500px) {
   .container nav {
     flex-direction: column;
+    margin: auto;
   }
 }
 .container nav a {
   display: flex;
   margin: 2%;
-  margin-bottom: 8vh;
   width: 22vw;
   height: 20vh;
   text-decoration: none;
@@ -259,15 +259,12 @@ a {
     font-size: 2rem;
   }
 }
-@media (max-width: 1000px) and (min-width: 500px) {
-  .container nav a {
-    margin: auto 25px auto 10px;
-  }
-}
 @media (max-width: 500px) {
   .container nav a {
     font-size: 3rem;
+    margin: auto;
     width: 95vw;
+    margin-bottom: 3vh;
   }
 }
 .container nav a:hover {
@@ -285,42 +282,53 @@ html {
   font-size: 62.5%;
   background-image: url("https://cdn.discordapp.com/attachments/644333219512188928/644357514607067156/auction-image.png");
 }
-.c-container {
-  width: 100vw;
+body {
+  overflow-y: scroll;
+}
+body .c-container {
+  width: 99vw;
   height: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  margin: auto;
 }
-.c-container nav {
+@media (max-width: 500px) {
+  body .c-container {
+    margin-top: 1vh;
+  }
+}
+body .c-container nav {
   display: flex;
 }
 @media (max-width: 500px) {
-  .c-container nav {
+  body .c-container nav {
     flex-direction: column;
   }
 }
-.c-container nav .nav-link {
+body .c-container nav a {
   display: flex;
-  margin: 1.5%;
-  width: 20vw;
+  margin: 1% 2%;
+  width: 33vw;
   height: 10vh;
   text-decoration: none;
   justify-content: space-around;
   font-size: 3rem;
   background-color: rgba(255, 255, 255, 0.45);
+  align-items: center;
   color: black;
   border: 1px solid black;
   transition: all 0.75s ease-in-out;
 }
 @media (max-width: 500px) {
-  .c-container nav .nav-link {
+  body .c-container nav a {
     font-size: 3rem;
-    margin: auto 25px auto 5px;
+    margin: auto;
     width: 95vw;
+    margin-bottom: 2vh;
   }
 }
-.c-container nav .nav-link:hover {
+body .c-container nav a:hover {
   background-color: rgba(0, 0, 0, 0.75);
   color: whitesmoke;
   opacity: 1;
@@ -328,25 +336,26 @@ html {
   transition: all 0.5s ease-in-out;
   border: 4px ridge white;
 }
-.main-con {
+body .main-content {
   display: flex;
   margin: auto;
   flex-wrap: wrap;
   justify-content: space-around;
+  overflow-wrap: break-word;
 }
 @media (max-width: 500px) {
-  .main-con {
+  body .main-content {
     flex-direction: column;
     width: 100vw;
   }
 }
 @media (max-width: 1000px) and (min-width: 500px) {
-  .main-con {
+  body .main-content {
     flex-direction: column;
     width: 100vw;
   }
 }
-.main-con h2 {
+body .main-content h2 {
   display: flex;
   margin: auto;
   justify-content: center;
@@ -356,52 +365,53 @@ html {
   margin: 2%;
 }
 @media (max-width: 1000px) and (min-width: 500px) {
-  .main-con h2 {
+  body .main-content h2 {
     font-size: 6rem;
   }
 }
 @media (max-width: 500px) {
-  .main-con h2 {
+  body .main-content h2 {
     font-size: 5rem;
     width: 95vw;
   }
 }
-.main-con .meet-me {
+body .main-content .meet-me {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   background-color: #a4adba;
   border: 1px solid black;
   width: 45vw;
-  margin: 1%;
-  padding: 0% 2% 2% 2%;
-  transition: all 0.5s ease-in-out;
+  margin: 2%;
+  float: left;
+  overflow-wrap: break-word;
 }
-.main-con .meet-me:hover {
+body .main-content .meet-me:hover {
   background-color: white;
   opacity: 1;
+  transform: scale(1.05);
   transition: all 0.5s ease-in-out;
+  border: 4px ridge white;
 }
 @media (max-width: 1000px) and (min-width: 500px) {
-  .main-con .meet-me {
+  body .main-content .meet-me {
     flex-direction: column;
-    width: 96vw;
-    padding-bottom: 2vh;
-    justify-content: center;
-    margin: 2.5%;
-    margin: auto 25px 20px 5px;
-  }
-}
-@media (max-width: 500px) {
-  .main-con .meet-me {
-    width: 95vw;
+    width: 93vw;
     padding-bottom: 2vh;
     margin-bottom: 2vh;
     justify-content: center;
-    margin: auto 25px 10px 5px;
   }
 }
-.main-con .meet-me h3 {
+@media (max-width: 500px) {
+  body .main-content .meet-me {
+    width: 91vw;
+    padding-bottom: 2vh;
+    margin-bottom: 2vh;
+    justify-content: center;
+    margin: 2.5%;
+  }
+}
+body .main-content .meet-me h3 {
   width: 100vw;
   text-align: center;
   font-weight: bold;
@@ -409,14 +419,20 @@ html {
   margin-bottom: 2%;
   margin-top: 1%;
 }
-.main-con .meet-me h4 {
+body .main-content .meet-me h4 {
   width: 100vw;
   text-align: center;
   font-size: 2rem;
   margin-bottom: 2%;
 }
-.main-con .meet-me p {
+body .main-content .meet-me p {
   font-size: 1.5rem;
+  margin: auto;
+  float: left;
+  overflow-wrap: break-word;
+  padding-left: 0%;
+  margin-left: 0%;
+  margin-top: 2%;
 }
 body .main {
   position: absolute;
