--- a/less/contactUs.less
+++ b/less/contactUs.less
@@ -32,8 +32,8 @@ body{
         
         a {
             display: flex;
-            margin: 1.5%;
-            width: 40vw;
+            margin: 1% 2%;
+            width: 33vw;
             height: 10vh;
             text-decoration: none;
             justify-content: space-around;
@@ -68,7 +68,7 @@ body{
     margin: auto;
     flex-wrap: wrap;
     justify-content: space-around;
-   
+    overflow-wrap: break-word;
     
     @media @mobile {
         flex-direction: column;
@@ -105,25 +105,27 @@ body{
         border: 1px solid black;
         width: 45vw;
         margin: 2%;
-        padding: 0% 2% 2% 2%;
+        // padding: 0% 2% 2% 2%;
+        float: left;
+        overflow-wrap: break-word;
         &:hover{
             background-color: white;
             opacity: 1;
-            transform:scale(1.09);
+            transform:scale(1.05);
             transition:all .5s ease-in-out;
             border:4px ridge white;
         }
         @media @tablet {
             flex-direction: column;
-            width: 96vw;
+            width: 93vw;
             padding-bottom: 2vh;
             margin-bottom: 2vh;
             justify-content: center;
-            margin: 2.5%;
+            
             
         }
         @media @mobile{
-            width: 95vw;
+            width: 91vw;
             padding-bottom: 2vh;
             margin-bottom: 2vh;
             justify-content: center;
@@ -147,7 +149,12 @@ body{
         }
         p{
             font-size: 1.5rem;
-            margin: 2% 0%;
+            margin: auto;
+            float: left;
+            overflow-wrap: break-word;
+            padding-left: 0%;
+            margin-left: 0%;
+            margin-top: 2%;
         }
     }
 }
