--- a/less/var.less
+++ b/less/var.less
@@ -60,3 +60,11 @@
 
 
 
+.prevent-text-breakouts {
+    -ms-word-break: break-all;
+        word-break: break-all;
+        word-break: break-word;
+    -webkit-hyphens: auto;
+       -moz-hyphens: auto;
+            hyphens: auto;
+  }
